--- a/final_project_template/css/main.css
+++ b/final_project_template/css/main.css
@@ -10,18 +10,33 @@ Base styles:
 
 body {
   margin: auto;
-  max-width: 1000px;
+  max-width: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #fff;
+  color: black;
+  text-align: center;
 }
 
 /* Fix for responsive images */
 
-img {
+/* img {
   background-size: cover;
   max-width: 100%;
+}*/
+
+a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.navbar a {
+  padding: 10px 20px;
+  color: #330000;
 }
 
 .navbar {
-  font-family: "helvetica";
+  /*  font-family: "helvetica";*/
+
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -34,39 +49,100 @@ img {
   text-align: center;
   width: 100%;
   margin: 0 auto;
+  margin-top: 10px;
   padding: 10px;
-  background: #BDE0FF;
-}
+  background: #ffffff;
 
-a {
-  text-decoration: none;
-  color:#FFFFFF;
-}
-
-.navbar a {
-  padding: 5px 15px;
 }
 
 a:hover {
-  color:red;
-}
-
-h2 {
-  text-align: center;
-  font-size: 50px;
+  color: #ffe6e6;
 }
 
 /* header css starts here*/
-.main-header {
-  background-image: url("../img/bball.jpg");
-  color: #ffffff;
-  background-size: cover;
-  font-family:"helvetica";
+
+#showcase {
+  height: 200px;
+}
+
+#showcase h1 {
+  font-size: 100px;
+  color: #800000;
+  letter-spacing: 7px;
+  line-height: 1.3;
+  background: white;
+  position: relative;
+  animation-name: sliding;
+  animation-duration: 4s;
+  animation-fill-mode: forwards;
+}
+@keyframes sliding {
+  0% {
+    top: -50px
+  }
+  100% {
+    top: 50px
+  }
+  0% {
+    background-color: white;
+    border-radius: 0 0 0 0;
+  }
+  25% {
+    background-color: red;
+    border-radius: 50% 0 0 0;
+  }
+  50% {
+    background-color: white;
+    border-radius: 50% 50% 0 0;
+  }
+  25% {
+    background-color: #fff;
+    border-radius: 50% 50% 50% 0;
+  }
+  100% {
+    background-image: url("../img/cuba-cover.jpg");
+    border-radius: 50% 50% 50% 50%;
+  }
+}
+
+#content h2 {
+  font-family: 'Montserrat' sans-serif;
   text-align: center;
-  font-size:20px;
+  font-size: 50px;
+}
+#content {
+  position: relative;
+  animation-name: content;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
+}
+@keyframes content {
+  0% {left: -1000px;}
+  100% {left: 0;}
+}
+
+.OuterDiv {
+  display: flex;
+}
+.prettybox {
+  padding: 20px;
+  text-align: center;
+  font-family: "lato";
+  font-style: normal;
+  font-weight: 400;
+  width: 35%;
+  font-size: 15px;
+}
+
+
+/*background-image: url("../img/IMG_4101.jpg");*/
+
+/*  background-size: cover;
+  font-family: "helvetica";
+  text-align: center;
+  font-size: 50px;
   margin-top: 50px;
   margin-bottom: 50px;
   padding-top: 100px;
   padding-bottom: 100px;
-  margin: 0;
-}
+  margin: 0;*/
